[package]
name = "wslpath2"
version = "0.0.1"
edition = "2021"
authors = ["Pratik Chowdhury <pratikc@live.co.uk>", "Michael Lohr <michael@lohr.dev>"]
description = "Convert Windows to WSL paths and vice-versa"
readme = "README.md"
repository = "https://github.com/michidk/wslpath2"
documentation = "https://github.com/michidk/wslpath2#readme"
homepage = "https://github.com/michidk/wslpath2"
license = "MIT"
keywords = ["wsl", "windows", "path", "convert"]
categories = ["filesystem::path", "os::windows", "os::unix"]

[lib]
name = "wslpath2"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
